Update 08. Go (Golang) Installation.md

--- a/3. Kali Linux/08. Go (Golang) Installation.md
+++ b/3. Kali Linux/08. Go (Golang) Installation.md
@@ -184,4 +184,4 @@ go version
 which httpx
 ```
 ---
-
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
