--- a/3. Kali Linux/09. Python Installation and Environment Setup.md
+++ b/3. Kali Linux/09. Python Installation and Environment Setup.md
@@ -217,4 +217,4 @@ source ~/.bashrc
 ```
 
 ---
-
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
