--- a/3. Kali Linux/10. ZSH Shell Install.md
+++ b/3. Kali Linux/10. ZSH Shell Install.md
@@ -34,4 +34,4 @@ chsh -s $(which zsh)
 source ~/.zshrc
 ```
 ---
-
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
