--- a/3. Kali Linux/07. Useful Tools Installation.md
+++ b/3. Kali Linux/07. Useful Tools Installation.md
@@ -253,5 +253,5 @@ Use tools like:
 * **KDE Connect** (wireless integration)
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
