Update 04. Kali Linux Installation in VirtualBox.md

--- a/3. Kali Linux/04. Kali Linux Installation in VirtualBox.md
+++ b/3. Kali Linux/04. Kali Linux Installation in VirtualBox.md
@@ -142,4 +142,4 @@ passwd  # Set root password
 * Increase font size for terminals and system UI
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
