--- a/3. Kali Linux/03. Kali Linux All Files.md
+++ b/3. Kali Linux/03. Kali Linux All Files.md
@@ -126,4 +126,4 @@ You’ll see multiple ISO options. Here are the two main ones:
 | Want all tools preloaded      | **Everything ISO** |
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
