--- a/3. Kali Linux/02. Kali Linux Fundamentals.md
+++ b/3. Kali Linux/02. Kali Linux Fundamentals.md
@@ -219,4 +219,4 @@ cat /etc/os-release                  # Distro info
 * 🔄 Practice safe and repeatable testing setups
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
