--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -286,5 +286,4 @@ hping3 -X 192.168.129.145
 * `--rawip` mode allows sending fully custom IP packets.
 
 ---
-
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
