--- a/3. Kali Linux/01. Penetration Testing Operating Systems.md
+++ b/3. Kali Linux/01. Penetration Testing Operating Systems.md
@@ -57,4 +57,4 @@
 💡 **Pro Tip:** If you want more control, start from a **minimal Debian install** and build your own pentesting box.
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
