--- a/4. Network Reconnaissance Scanning/07. nping.md
+++ b/4. Network Reconnaissance Scanning/07. nping.md
@@ -305,3 +305,5 @@ nping --udp -p 1337 --data-string "CustomMessage" -c 2 192.168.129.4
 For UDP-based device/service testing, combine these options as needed for your scenario. Run with elevated privileges if packet spoofing or special flags are required.
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
