--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -238,3 +238,4 @@ nmap -v scanme.nmap.org
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
