Update 09. Nmap Protocol Header.md

--- a/4. Network Reconnaissance Scanning/09. Nmap Protocol Header.md
+++ b/4. Network Reconnaissance Scanning/09. Nmap Protocol Header.md
@@ -236,3 +236,4 @@ ICMP gives Nmap the ability to perform effective network mapping, device discove
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
