Update 11. Nmap Scanning Workflow.md

--- a/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
+++ b/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
@@ -212,3 +212,4 @@ nmap -PR -sS -p- -sV -O -oN scan_results.txt armourinfosec.com
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
