--- a/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
+++ b/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
@@ -141,3 +141,4 @@ The TLS (Transport Layer Security) handshake is a crucial process that establish
   * Other secure communication channels over networks.
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
