--- a/2. Reconnaissance (Footprinting)/01. Reconnaissance (Footprinting).md
+++ b/2. Reconnaissance (Footprinting)/01. Reconnaissance (Footprinting).md
@@ -248,5 +248,5 @@ Common issues (**OWASP Top 10**):
 * Enhances incident response and monitoring
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
