--- a/2. Reconnaissance (Footprinting)/02. Website Reconnaissance.md
+++ b/2. Reconnaissance (Footprinting)/02. Website Reconnaissance.md
@@ -148,4 +148,5 @@ Use to explore older site content:
 * [archive.ph](https://archive.ph)
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
