--- a/2. Reconnaissance (Footprinting)/05. Websites Built With.md
+++ b/2. Reconnaissance (Footprinting)/05. Websites Built With.md
@@ -166,5 +166,6 @@ Track technology adoption across industries to make data-driven product and stra
 * Awareness of public exposure and **technology stack hygiene**.
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
