--- a/2. Reconnaissance (Footprinting)/06.  WHOIS Lookup.md
+++ b/2. Reconnaissance (Footprinting)/06.  WHOIS Lookup.md
@@ -175,5 +175,6 @@ This is **not a WHOIS lookup**, but it's used to search for **registered tradema
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
 
