--- a/2. Reconnaissance (Footprinting)/08. Domain Name to IP to Location.md
+++ b/2. Reconnaissance (Footprinting)/08. Domain Name to IP to Location.md
@@ -124,5 +124,6 @@ These tools rely on **IP geolocation databases**, which map IP address ranges to
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
 
