Update 09. Autonomous System (AS-ASN-IP) Lookup.md

--- a/2. Reconnaissance (Footprinting)/09. Autonomous System (AS-ASN-IP) Lookup.md
+++ b/2. Reconnaissance (Footprinting)/09. Autonomous System (AS-ASN-IP) Lookup.md
@@ -104,4 +104,5 @@ I got you. Ping me. I’ll script it like a wizard. 🧙‍♂️💻
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
