--- a/2. Reconnaissance (Footprinting)/10. IP Traceroute Tool.md
+++ b/2. Reconnaissance (Footprinting)/10. IP Traceroute Tool.md
@@ -127,5 +127,6 @@ sudo traceroute -T -p 443 -n google.com
 * **tracepath** is good for users without root access.
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
