--- a/2. Reconnaissance (Footprinting)/11. IP Address History.md
+++ b/2. Reconnaissance (Footprinting)/11. IP Address History.md
@@ -56,4 +56,5 @@ If you’d like to **automate IP history tracking**, you can:
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
