Update 13. Reverse IP Domain Lookup.md

--- a/2. Reconnaissance (Footprinting)/13. Reverse IP Domain Lookup.md
+++ b/2. Reconnaissance (Footprinting)/13. Reverse IP Domain Lookup.md
@@ -68,4 +68,5 @@ dig +short example.com
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
