--- a/2. Reconnaissance (Footprinting)/14. Reverse Mail Server Lookup.md
+++ b/2. Reconnaissance (Footprinting)/14. Reverse Mail Server Lookup.md
@@ -96,4 +96,5 @@ I can code a clean script (in Python or Bash) to:
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
