--- a/2. Reconnaissance (Footprinting)/16. Google Hacking Database (GHDB) & Google Dorking.md
+++ b/2. Reconnaissance (Footprinting)/16. Google Hacking Database (GHDB) & Google Dorking.md
@@ -152,4 +152,6 @@ Using advanced search operators to find **sensitive info** accidentally exposed 
 | `apple iphone store in indore`     | **3,710,000**         |
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
