--- a/2. Reconnaissance (Footprinting)/18. Google Hacking Database (GHDB) Tools.md
+++ b/2. Reconnaissance (Footprinting)/18. Google Hacking Database (GHDB) Tools.md
@@ -79,4 +79,5 @@ metagoofil -d armourinfosec.org -l 20 -t pdf -n 20 -f report.html -o doc
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
