--- a/2. Reconnaissance (Footprinting)/20. Shodan Recon GUI and CLI.md
+++ b/2. Reconnaissance (Footprinting)/20. Shodan Recon GUI and CLI.md
@@ -492,7 +492,8 @@ shodan parse --fields ip_str,port,org,hostnames apache-tomcat.json.gz
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
 
 
