--- a/2. Reconnaissance (Footprinting)/21. LeakIX Recon.md
+++ b/2. Reconnaissance (Footprinting)/21. LeakIX Recon.md
@@ -114,5 +114,6 @@ Register to unlock pro features:
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
 
