Update 22. FOFA Recon.md

--- a/2. Reconnaissance (Footprinting)/22. FOFA Recon.md
+++ b/2. Reconnaissance (Footprinting)/22. FOFA Recon.md
@@ -142,4 +142,6 @@ You can also add flags like:
 * 🐍 Python + FOFA API → Automate weekly recon
 
 ---
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
