--- a/2. Reconnaissance (Footprinting)/24. Open-Source Intelligence (OSINT).md
+++ b/2. Reconnaissance (Footprinting)/24. Open-Source Intelligence (OSINT).md
@@ -155,4 +155,5 @@ flowchart TD
 ```
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
