--- a/2. Reconnaissance (Footprinting)/25. Image Metadata.md
+++ b/2. Reconnaissance (Footprinting)/25. Image Metadata.md
@@ -215,4 +215,5 @@ Google Maps: https://www.google.com/maps/search/?api=1&query=28.60920277777778,7
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates
