--- a/2. Reconnaissance (Footprinting)/27. Email Tracking & Protocols.md
+++ b/2. Reconnaissance (Footprinting)/27. Email Tracking & Protocols.md
@@ -182,4 +182,4 @@ by mail.yourdomain.com with SMTP; Thu, 1 Jul 2025 +0530
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
