Update 28. Email Header Analysis.md

--- a/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
+++ b/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
@@ -168,4 +168,4 @@ These tools track when the email is opened, the recipient’s device, IP address
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
