Update 29. Email Spoofing.md

--- a/2. Reconnaissance (Footprinting)/29. Email Spoofing.md
+++ b/2. Reconnaissance (Footprinting)/29. Email Spoofing.md
@@ -117,5 +117,5 @@ Look for:
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
