--- a/2. Reconnaissance (Footprinting)/30. People Search & OSINT Tools.md
+++ b/2. Reconnaissance (Footprinting)/30. People Search & OSINT Tools.md
@@ -110,4 +110,4 @@
 
 ---
 
-📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
